--- a/templates/page.html
+++ b/templates/page.html
@@ -45,7 +45,7 @@
 <center><img loading="lazy" src="{{logo_url}}" alt = "{{ title }}" style="max-height:250px;"></center>
     <center><small>{{ welcome_html }}</small></center>
     <center>
-      <div style="border: 2px solid var(--btn-border); padding: 5px; margin: 5px; display: inline-flex; align-items: center; font-size: large;">
+      <div id="nav-controls-container" style="border: 2px solid var(--btn-border); padding: 5px; margin: 5px; display: inline-flex; align-items: center; font-size: large;">
         <div class="{% if g.is_mobile %}nav-links-mobile{% else %}nav-links-desktop{% endif %}">
           <a href="https://linuxreport.net" target="_blank" class="nav-link-linux">Linux</a>
           <a href="https://pvreport.org" target="_blank" class="nav-link-pv">PV</a>
